--- a/mealsapp/pubspec.yaml
+++ b/mealsapp/pubspec.yaml
@@ -34,10 +34,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: 1.0.6
   google_fonts: ^6.1.0
   material: ^1.0.0+2
   transparent_image: ^2.0.1
+  flutter_riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
