--- a/favorite_places_app/pubspec.yaml
+++ b/favorite_places_app/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.3
-  uuid: ^3.0.7
+  google_fonts: ^6.1.0
+  uuid: ^4.2.2
   flutter_riverpod: ^2.3.2
+  riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
