--- a/favorite_places_app/pubspec.yaml
+++ b/favorite_places_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^2.3.2
   riverpod: ^2.4.9
   image_picker: ^1.0.6
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
