--- a/favorite_places_app/pubspec.yaml
+++ b/favorite_places_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   riverpod: ^2.4.9
   image_picker: ^1.0.6
   location: ^5.0.3
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
